feat: Introduce ChartMaster project, enhance existing project pages with emoji styling, and update README to Markdown.

--- a/projects/apex.html
+++ b/projects/apex.html
@@ -18,7 +18,7 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1>📈 Apex SaaS</h1>
+                <h1><span class="emoji">📈</span> Apex SaaS</h1>
                 <p class="section-subtitle">Transforming SaaS Data into Actionable Revenue Intelligence</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
