--- a/projects/cinesage.html
+++ b/projects/cinesage.html
@@ -18,7 +18,7 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1>🎬 CineSage</h1>
+                <h1><span class="emoji">🎬</span> CineSage</h1>
                 <p class="section-subtitle">Discover your next favorite film with AI-driven cinematic intelligence</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
