--- a/projects/cosmos.html
+++ b/projects/cosmos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmos App - Celestial Data Platform</title>
+    <title>Cosmos - AI-Powered Astrology Platform</title>
     <link rel="stylesheet" href="../assets/css/modern.css">
     <link rel="stylesheet" href="../assets/css/project-detail.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -18,24 +18,24 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1>🌌 Cosmos App</h1>
-                <p class="section-subtitle">High-performance celestial data management and visualization platform</p>
+                <h1><span class="emoji">🌌</span> Cosmos</h1>
+                <p class="section-subtitle">AI-Powered Multi-Tradition Astrology Platform</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
                         <h4>Platform</h4>
-                        <p>Web Dashboard</p>
+                        <p>Web Application</p>
                     </div>
                     <div class="meta-item">
                         <h4>Category</h4>
-                        <p>Data Engineering / Viz</p>
+                        <p>Fintech / AI / Wellness</p>
                     </div>
                     <div class="meta-item">
                         <h4>Tech Stack</h4>
-                        <p>React, Vite, PostgreSQL, PLpgSQL</p>
+                        <p>React, Supabase, AI</p>
                     </div>
                     <div class="meta-item">
                         <h4>Target</h4>
-                        <p>Data Analysts / Admins</p>
+                        <p>Global Astrology Seekers</p>
                     </div>
                 </div>
             </div>
@@ -44,49 +44,54 @@
         <main class="detail-content">
             <div class="main-content">
                 <section class="content-section">
-                    <h2><i class="fas fa-atom"></i> Overview</h2>
-                    <p>Cosmos is a sophisticated web application engineered for managing and visualizing complex
-                        datasets with speed and clarity. Built on a modern foundation of React and Vite, the platform
-                        utilizes a type-safe TypeScript architecture and a sleek, responsive UI powered by shadcn-ui and
-                        Tailwind CSS.</p>
+                    <h2><i class="fas fa-bullseye"></i> Overview</h2>
+                    <p>Cosmos is a sophisticated, multi-tradition astrology platform that bridges the gap between
+                        ancient celestial wisdom and modern artificial intelligence. Unlike standard astrology apps,
+                        Cosmos offers deep-dive calculations and interpretations for Western, Tamil, and Telugu systems,
+                        providing a localized and authentic experience for users across different cultures.</p>
                 </section>
 
                 <section class="content-section">
-                    <h2><i class="fas fa-puzzle-piece"></i> Problem & Solution</h2>
-                    <p>Visualizing and managing high-volume relational data often results in interface lag and
-                        architectural complexity. Cosmos solves this by implementing a reactive, component-driven
-                        frontend coupled with server-side logic in **PLpgSQL** to offload heavy computations, ensuring
-                        real-time interactivity with large datasets.</p>
-                </section>
-
-                <section class="content-section">
-                    <h2><i class="fas fa-bolt"></i> Key Features</h2>
+                    <h2><i class="fas fa-star"></i> Key Features</h2>
                     <div class="feature-grid">
                         <div class="feature-item">
-                            <h3>Type-Safe State</h3>
-                            <p>Rigorous use of TypeScript for application state and data flow management.</p>
+                            <h3>🤖 AI Astrology Chatbot</h3>
+                            <p>An intelligent companion that understands planetary influences and adapts its tone to the
+                                selected astrology tradition (Western or Vedic).</p>
                         </div>
                         <div class="feature-item">
-                            <h3>PLpgSQL Optimization</h3>
-                            <p>Advanced stored procedures for efficient data retrieval and heavy computations.</p>
+                            <h3>🪐 Birth Chart Generator</h3>
+                            <p>Advanced natal chart mapping including Nakshatra details, Sun/Moon signs, and lucky
+                                numbers/gems based on precise birth data.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Modular UI</h3>
-                            <p>Built with shadcn-ui and Tailwind CSS for a scalable and consistent design system.</p>
+                            <h3>💕 Compatibility Checker</h3>
+                            <p>Algorithmic relationship analysis that explores cosmic connections between different
+                                zodiac profiles.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>High-Performance Rendering</h3>
-                            <p>Vite-powered build system ensuring sub-second hot module replacement and lightning-fast
-                                loads.</p>
+                            <h3>📰 Dynamic Blog & Newsletter</h3>
+                            <p>A headless CMS-driven blog for transit updates and a personalized newsletter system
+                                delivering daily insights to users' inboxes.</p>
                         </div>
                     </div>
                 </section>
 
                 <section class="content-section">
-                    <h2><i class="fas fa-database"></i> Database Architecture</h2>
-                    <p>The system is integrated with a robust **PostgreSQL** backend. We leveraged PLpgSQL for optimized
-                        database procedures to maintain data integrity while providing the speed required for
-                        performance-critical environments.</p>
+                    <h2><i class="fas fa-globe"></i> Multi-Tradition Architecture</h2>
+                    <p>The platform treats each tradition as a first-class citizen. Through the <code>/en/</code>,
+                        <code>/ta/</code>, and <code>/te/</code> route prefixes, Cosmos implements independent
+                        calculation engines for Tropical and Sidereal zodiacs, ensuring that Nakshatra labels and zodiac
+                        interpretations are culturally accurate and technically precise.</p>
+                </section>
+
+                <section class="content-section">
+                    <h2><i class="fas fa-code"></i> Technical Implementation</h2>
+                    <p>Built with a high-performance <strong>Vite + React</strong> frontend and
+                        <strong>TypeScript</strong> for type-safe celestial calculations. The backend leverages
+                        <strong>Supabase (Lovable Cloud)</strong> for real-time data persistence and user
+                        authentication, while <strong>shadcn/ui</strong> provides a mystical, cosmic-themed interface
+                        with deep purples and starry gradients.</p>
                 </section>
             </div>
 
@@ -96,20 +101,23 @@
                     <div class="tech-list mb-4">
                         <span class="tech-pill">React</span>
                         <span class="tech-pill">TypeScript</span>
-                        <span class="tech-pill">PostgreSQL</span>
-                        <span class="tech-pill">Vite</span>
+                        <span class="tech-pill">Supabase</span>
                         <span class="tech-pill">Tailwind CSS</span>
-                        <span class="tech-pill">shadcn-ui</span>
+                        <span class="tech-pill">Vite</span>
+                        <span class="tech-pill">shadcn/ui</span>
+                        <span class="tech-pill">Lovable AI</span>
                     </div>
-                    <a href="#" class="link-btn secondary"><i class="fas fa-lock"></i> Private Source</a>
+                    <a href="https://cosmos-app.lovable.app" target="_blank" class="link-btn"><i
+                            class="fas fa-external-link-alt"></i> Live Demo</a>
+                    <a href="#" class="link-btn secondary mt-2"><i class="fas fa-lock"></i> Private Source</a>
 
                     <div class="meta-item mt-4">
-                        <h4>Performance Metrics</h4>
+                        <h4>Traditions Supported</h4>
                         <ul class="project-features-list">
-                            <li>Optimized PLpgSQL Queries</li>
-                            <li>Component-Driven Rendering</li>
-                            <li>Type-Safe Data Flow</li>
-                            <li>Sub-second Response Times</li>
+                            <li>Western (Tropical Zodiac)</li>
+                            <li>Tamil (Vedic/Sidereal)</li>
+                            <li>Telugu (Vedic/Sidereal)</li>
+                            <li>Nakshatra Calculations</li>
                         </ul>
                     </div>
                 </div>
