--- a/projects/huehunt.html
+++ b/projects/huehunt.html
@@ -18,7 +18,7 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1>🎨 HueHunt</h1>
+                <h1><span class="emoji">🎨</span> HueHunt</h1>
                 <p class="section-subtitle">Mobile-first color matching game with AI-powered analytics</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
