--- a/projects/sharecharge.html
+++ b/projects/sharecharge.html
@@ -18,7 +18,7 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1>⚡ ShareCharge</h1>
+                <h1><span class="emoji">⚡</span> ShareCharge</h1>
                 <p class="section-subtitle">Democratizing Electric Vehicle Charging Infrastructure</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
