--- a/projects/xxxxx.html
+++ b/projects/xxxxx.html
@@ -18,7 +18,7 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1>🚀 XXXXX</h1>
+                <h1><span class="emoji">🚀</span> XXXXX</h1>
                 <p class="section-subtitle">The Best Free AI Tool for Writing & Content Detection</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
