--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 					<span class="gradient-text">Gautham Mahadevan</span>
 				</h1>
 				<p class="hero-subtitle">
-					<i class="fas fa-chart-line"></i> Data Analyst & Developer
+					<i class="fas fa-chart-line"></i> Data Analyst & Viber Coder
 					<span class="subtitle-emoji">🔍</span>
 				</p>
 				<div class="hero-quote">
 					<i class="fas fa-quote-left quote-icon"></i>
-					<p class="quote-text">"In God we trust, all others must bring data" - W. Edwards Deming</p>
+					<p class="quote-text">"Torture the data, and it will confess to anything." — Ronald Coase</p>
 					<i class="fas fa-quote-right quote-icon"></i>
 				</div>
 				<p class="hero-description">
@@ -96,19 +96,23 @@
 			</div>
 			<div class="hero-stats">
 				<div class="stat-card">
-					<div class="stat-icon">⏱️</div>
-					<div class="stat-number">5+</div>
-					<div class="stat-label">Years of Data Crunching</div>
+					<div class="stat-icon"><i class="fas fa-database"></i></div>
+					<div class="stat-number">10<sup>9</sup><span class="plus-sign">+</span></div>
+					<div class="stat-label">Data Points Processed</div>
 				</div>
 				<div class="stat-card">
-					<div class="stat-icon">🚀</div>
-					<div class="stat-number">13+</div>
-					<div class="stat-label">Projects Delivered</div>
+					<div class="stat-icon"><i class="fas fa-project-diagram"></i></div>
+					<div class="stat-number">10<span class="plus-sign">+</span></div>
+					<div class="stat-label">Flagship Products Built</div>
 				</div>
 				<div class="stat-card">
-					<div class="stat-icon">⚡</div>
-					<div class="stat-number">∞</div>
-					<div class="stat-label">Coffees Consumed</div>
+					<div class="stat-icon"><i class="fas fa-shield-virus"></i></div>
+					<div class="stat-number">404</div>
+					<div class="stat-label">Limits Not Found</div>
+				</div>
+				<div class="sql-terminal-quote">
+					<span class="terminal-prompt">gautham@data:~$</span>
+					<span class="terminal-command">SELECT insights FROM chaos WHERE noise = '0';</span>
 				</div>
 			</div>
 		</div>
@@ -121,29 +125,65 @@
 	<section id="fun-facts" class="fun-facts-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">By The Numbers 📈</h2>
+				<h2 class="section-title">By The Numbers <span class="emoji"></span>📈</span></h2>
 				<p class="section-subtitle">Some fun stats about my data journey</p>
 			</div>
 			<div class="facts-grid">
-				<div class="fact-card">
-					<div class="fact-icon">📊</div>
-					<div class="fact-number" data-target="20">0</div>
-					<div class="fact-label">+ Dashboards Created</div>
+				<div class="fact-card stat-blue">
+					<div class="fact-icon"><i class="fas fa-chart-bar"></i></div>
+					<div class="fact-number" data-target="20">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Dashboards Created</div>
 				</div>
-				<div class="fact-card">
-					<div class="fact-icon">🔍</div>
-					<div class="fact-number" data-target="500">0</div>
-					<div class="fact-label">+ SQL Queries Written</div>
+				<div class="fact-card stat-purple">
+					<div class="fact-icon"><i class="fas fa-database"></i></div>
+					<div class="fact-number" data-target="500">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">SQL Queries Written</div>
 				</div>
-				<div class="fact-card">
-					<div class="fact-icon">📉</div>
-					<div class="fact-number" data-target="30">0</div>
-					<div class="fact-label">% Average Performance Boost</div>
+				<div class="fact-card stat-pink">
+					<div class="fact-icon"><i class="fas fa-bolt"></i></div>
+					<div class="fact-number" data-target="30">
+						<span class="number-val">0</span><span class="plus-sign">%+</span>
+					</div>
+					<div class="fact-label">Performance Boost</div>
 				</div>
-				<div class="fact-card">
-					<div class="fact-icon">💻</div>
-					<div class="fact-number" data-target="20000">0</div>
-					<div class="fact-label">+ Lines of Code Written</div>
+				<div class="fact-card stat-cyan">
+					<div class="fact-icon"><i class="fas fa-code"></i></div>
+					<div class="fact-number" data-target="100000">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Lines of Code</div>
+				</div>
+				<div class="fact-card stat-orange">
+					<div class="fact-icon"><i class="fas fa-brain"></i></div>
+					<div class="fact-number" data-target="10">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Full Stack Projects</div>
+				</div>
+				<div class="fact-card stat-green">
+					<div class="fact-icon"><i class="fas fa-cogs"></i></div>
+					<div class="fact-number" data-target="100">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Hours saved via Automations</div>
+				</div>
+				<div class="fact-card stat-red">
+					<div class="fact-icon"><i class="fas fa-coffee"></i></div>
+					<div class="fact-number" data-target="1250">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Coffees Consumed</div>
+				</div>
+				<div class="fact-card stat-indigo">
+					<div class="fact-icon"><i class="fas fa-medal"></i></div>
+					<div class="fact-number" data-target="50">
+						<span class="number-val">0</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Mini Projects</div>
 				</div>
 			</div>
 		</div>
@@ -152,58 +192,71 @@
 	<!-- Philosophy Section -->
 	<section id="philosophy" class="philosophy-section">
 		<div class="container">
-			<div class="philosophy-content">
-				<div class="philosophy-text">
-					<h2 class="philosophy-title">My Data Philosophy 🎯</h2>
-					<div class="philosophy-quotes">
-						<div class="philosophy-quote-item">
-							<div class="quote-bubble">
-								<p>"Data is like garbage. You'd better know what you're going to do with it before you
-									collect it."</p>
-								<span class="quote-author">- Mark Twain (sort of)</span>
-							</div>
-						</div>
-						<div class="philosophy-quote-item">
-							<div class="quote-bubble">
-								<p>I believe in <strong>clean data, clear insights, and actionable results</strong>.
-									Every dataset tells a story, and I'm here to help you read it!</p>
-							</div>
+			<div class="section-header">
+				<h2 class="section-title">My Data Philosophy <span class="emoji">🎯</span></h2>
+				<p class="section-subtitle">The principles that guide my analytical journey</p>
+			</div>
+
+			<div class="philosophy-grid">
+				<div class="philosophy-main">
+					<div class="philosophy-card highlight">
+						<div class="philosophy-card-icon"><i class="fas fa-quote-left"></i></div>
+						<div class="philosophy-card-content">
+							<p class="philosophy-quote">"Data is like garbage. You'd better know what you're going to do
+								with it before you collect it."</p>
+							<span class="philosophy-author">— Mark Twain (inspired)</span>
 						</div>
 					</div>
-					<div class="philosophy-principles">
-						<div class="principle-item">
-							<i class="fas fa-check-circle"></i>
-							<span>Question everything, trust the data</span>
+
+					<div class="value-cards">
+						<div class="value-card">
+							<div class="value-icon"><i class="fas fa-shield-alt"></i></div>
+							<div class="value-info">
+								<h4>Accuracy First</h4>
+								<p>Clean data is the bedrock of every meaningful insight.</p>
+							</div>
 						</div>
-						<div class="principle-item">
-							<i class="fas fa-check-circle"></i>
-							<span>Automate the boring, analyze the interesting</span>
+						<div class="value-card">
+							<div class="value-icon"><i class="fas fa-magic"></i></div>
+							<div class="value-info">
+								<h4>Automate Always</h4>
+								<p>If it can be automated, it should be. Efficiency is key.</p>
+							</div>
 						</div>
-						<div class="principle-item">
-							<i class="fas fa-check-circle"></i>
-							<span>Visualize first, explain later</span>
+						<div class="value-card">
+							<div class="value-icon"><i class="fas fa-eye"></i></div>
+							<div class="value-info">
+								<h4>Visualize Deeply</h4>
+								<p>A good chart tells the story that numbers can't speak.</p>
+							</div>
 						</div>
-						<div class="principle-item">
-							<i class="fas fa-check-circle"></i>
-							<span>If you can't measure it, you can't improve it</span>
+						<div class="value-card">
+							<div class="value-icon"><i class="fas fa-sync-alt"></i></div>
+							<div class="value-info">
+								<h4>Iterate Fast</h4>
+								<p>Learning from data is a continuous, rapid evolution.</p>
+							</div>
 						</div>
 					</div>
 				</div>
+
 				<div class="philosophy-visual">
-					<div class="data-visualization">
-						<div class="chart-container">
-							<div class="chart-bar" style="height: 80%">
-								<span class="chart-label">SQL</span>
+					<div class="visual-container">
+						<div class="data-flow-viz">
+							<div class="flow-step step-1">
+								<div class="step-icon">Raw</div>
+								<div class="step-dots"><span></span><span></span><span></span></div>
 							</div>
-							<div class="chart-bar" style="height: 75%">
-								<span class="chart-label">Python</span>
+							<div class="flow-step step-2">
+								<div class="step-icon">Clean</div>
+								<div class="step-dots"><span></span><span></span><span></span></div>
 							</div>
-							<div class="chart-bar" style="height: 90%">
-								<span class="chart-label">Tableau</span>
+							<div class="flow-step step-3">
+								<div class="step-icon">Insight</div>
 							</div>
-							<div class="chart-bar" style="height: 70%">
-								<span class="chart-label">Excel</span>
-							</div>
+						</div>
+						<div class="viz-overlay">
+							<span class="viz-label">Turning Chaos into Clarity</span>
 						</div>
 					</div>
 				</div>
@@ -215,7 +268,7 @@
 	<section id="projects" class="projects-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">My Projects 🚀</h2>
+				<h2 class="section-title">My Projects <span class="emoji">🚀</span></h2>
 				<p class="section-subtitle">A collection of my work in data science, AI, and full-stack development</p>
 				<div class="section-catchphrase">
 					<span class="catchphrase-text">"Code is poetry, data is the story"</span>
@@ -420,27 +473,56 @@
 					<div class="project-card featured">
 						<div class="project-card-header">
 							<h4>🌌 Cosmos App</h4>
-							<span class="project-badge">React • Vite • Data</span>
+							<span class="project-badge">AI • Astrology • React</span>
 						</div>
-						<p class="project-description">A high-performance celestial data management and visualization
-							platform for managing complex datasets with speed and clarity.</p>
+						<p class="project-description">AI-Powered Multi-tradition astrology platform combining ancient
+							wisdom with modern AI for Western, Tamil, and Telugu systems.</p>
 						<div class="tech-stack">
 							<span class="tech-pill">React</span>
 							<span class="tech-pill">TypeScript</span>
-							<span class="tech-pill">PostgreSQL</span>
-							<span class="tech-pill">Vite</span>
+							<span class="tech-pill">Supabase</span>
 							<span class="tech-pill">Tailwind CSS</span>
+							<span class="tech-pill">Lovable AI</span>
 						</div>
 						<ul class="project-features-list">
-							<li>Reactive Component-Driven Frontend</li>
-							<li>Optimized PLpgSQL Database Procedures</li>
-							<li>Type-Safe Application State Management</li>
-							<li>Modular Architecture with shadcn-ui</li>
-							<li>Real-time interaction with large datasets</li>
+							<li>AI-Powered Astrology Chatbot (Context-Aware)</li>
+							<li>Multi-Tradition Support (Western, Tamil, Telugu)</li>
+							<li>Birth Chart & Nakshatra Generator</li>
+							<li>Personalized Daily Horoscopes & Insights</li>
+							<li>Database-Driven Blog & Newsletter System</li>
 						</ul>
 						<div class="project-footer">
 							<a href="projects/cosmos.html" class="project-link"><i class="fas fa-info-circle"></i> View
 								Case Study</a>
+							<span class="private-badge"><i class="fas fa-lock"></i> Private Repo</span>
+						</div>
+					</div>
+
+					<!-- ChartMaster -->
+					<div class="project-card featured">
+						<div class="project-card-header">
+							<h4>📈 ChartMaster</h4>
+							<span class="project-badge">AI • Fintech • TypeScript</span>
+						</div>
+						<p class="project-description">AI-Powered Technical Analysis for smarter trading. Interprets
+							complex trading charts using multimodal AI to provide real-time market insights.</p>
+						<div class="tech-stack">
+							<span class="tech-pill">TypeScript</span>
+							<span class="tech-pill">Gemini Pro API</span>
+							<span class="tech-pill">Node.js</span>
+							<span class="tech-pill">AI Studio</span>
+							<span class="tech-pill">CSS3</span>
+						</div>
+						<ul class="project-features-list">
+							<li>Multimodal AI Chart Interpretation</li>
+							<li>Automated Trend & Pattern Recognition</li>
+							<li>Instant Technical Insight Generation</li>
+							<li>Seamless Gemini API Integration</li>
+							<li>Responsive Analysis Dashboard</li>
+						</ul>
+						<div class="project-footer">
+							<a href="projects/chartmaster.html" class="project-link"><i class="fas fa-info-circle"></i>
+								View Case Study</a>
 							<span class="private-badge"><i class="fas fa-lock"></i> Private Repo</span>
 						</div>
 					</div>
@@ -937,7 +1019,7 @@
 	<section id="skills" class="skills-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">My Toolbox 🛠️</h2>
+				<h2 class="section-title">My Toolbox <span class="emoji">🛠️</span></h2>
 				<p class="section-subtitle">Technologies and tools I work with (and love!)</p>
 				<div class="section-catchphrase">
 					<span class="catchphrase-text">"Give a data analyst the right tools, and they'll move mountains...
@@ -945,42 +1027,42 @@
 				</div>
 			</div>
 			<div class="skills-grid">
-				<div class="skill-card">
+				<div class="skill-card skill-blue">
 					<div class="skill-icon"><i class="fas fa-database"></i></div>
 					<h3>SQL</h3>
 					<p>MySQL, PostgreSQL, Google BigQuery</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-purple">
 					<div class="skill-icon"><i class="fas fa-chart-area"></i></div>
 					<h3>Tableau</h3>
 					<p>Tableau Desktop, Prep Builder, Server</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-green">
 					<div class="skill-icon"><i class="fas fa-file-excel"></i></div>
 					<h3>Excel</h3>
 					<p>Advanced Excel, Pivot Tables, Power Pivot</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-orange">
 					<div class="skill-icon"><i class="fab fa-python"></i></div>
 					<h3>Python</h3>
 					<p>NumPy, Pandas, Seaborn, Matplotlib</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-pink">
 					<div class="skill-icon"><i class="fas fa-link"></i></div>
 					<h3>CleverTap</h3>
 					<p>User journey tracking, funnel analysis</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-cyan">
 					<div class="skill-icon"><i class="fas fa-signal"></i></div>
 					<h3>Power BI</h3>
 					<p>Advanced charts and dashboards</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-gray">
 					<div class="skill-icon"><i class="fab fa-github"></i></div>
 					<h3>GitHub</h3>
 					<p>Version control and collaboration</p>
 				</div>
-				<div class="skill-card">
+				<div class="skill-card skill-blue">
 					<div class="skill-icon"><i class="fas fa-poll"></i></div>
 					<h3>Looker Studio</h3>
 					<p>Reports and data visualization</p>
@@ -993,7 +1075,7 @@
 	<section id="achievements" class="achievements-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">Key Achievements 🏆</h2>
+				<h2 class="section-title">Key Achievements <span class="emoji">🏆</span></h2>
 				<p class="section-subtitle">Numbers don't lie - here's proof!</p>
 			</div>
 			<div class="achievements-grid">
@@ -1021,6 +1103,12 @@
 					<div class="achievement-label">Slot Time Reduction</div>
 					<div class="achievement-desc">Query optimization mastery</div>
 				</div>
+				<div class="achievement-card highlight">
+					<div class="achievement-icon">💰</div>
+					<div class="achievement-number">$20,000+</div>
+					<div class="achievement-label">Cloud Costs Saved</div>
+					<div class="achievement-desc">Resource optimization & efficiency</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -1029,7 +1117,7 @@
 	<section id="experience" class="experience-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">Work Experience 💼</h2>
+				<h2 class="section-title">Work Experience <span class="emoji">💼</span></h2>
 				<p class="section-subtitle">My professional journey - where data meets business</p>
 				<div class="section-catchphrase">
 					<span class="catchphrase-text">"From spreadsheets to success stories"</span>
@@ -1135,7 +1223,7 @@
 	<section id="education" class="education-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">Education 🎓</h2>
+				<h2 class="section-title">Education <span class="emoji">🎓</span></h2>
 				<p class="section-subtitle">Where I learned to love data (and coffee)</p>
 			</div>
 			<div class="education-grid">
@@ -1175,7 +1263,7 @@
 	<section id="contact" class="contact-section">
 		<div class="container">
 			<div class="section-header">
-				<h2 class="section-title">Let's Connect! 🤝</h2>
+				<h2 class="section-title">Let's Connect! <span class="emoji">🤝</span></h2>
 				<p class="section-subtitle">Have a data problem? Let's solve it together!</p>
 				<div class="section-catchphrase">
 					<span class="catchphrase-text">"The best insights come from collaboration"</span>
@@ -1287,15 +1375,18 @@
 
 		// Animated counter for fun facts
 		function animateCounter(element, target, duration = 2000) {
+			const displayElement = element.querySelector('.number-val');
+			if (!displayElement) return;
+
 			let start = 0;
 			const increment = target / (duration / 16);
 			const timer = setInterval(() => {
 				start += increment;
 				if (start >= target) {
-					element.textContent = target >= 1000 ? Math.floor(target).toLocaleString() : Math.floor(target);
+					displayElement.textContent = target >= 1000 ? Math.floor(target).toLocaleString() : Math.floor(target);
 					clearInterval(timer);
 				} else {
-					element.textContent = start >= 1000 ? Math.floor(start).toLocaleString() : Math.floor(start);
+					displayElement.textContent = start >= 1000 ? Math.floor(start).toLocaleString() : Math.floor(start);
 				}
 			}, 16);
 		}
