--- a/projects/chartmaster.html
+++ b/projects/chartmaster.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SoulBond - AI Emotional Companion</title>
+    <title>ChartMaster - AI-Powered Technical Analysis</title>
     <link rel="stylesheet" href="../assets/css/modern.css">
     <link rel="stylesheet" href="../assets/css/project-detail.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -18,8 +18,8 @@
 
         <header class="project-hero">
             <div class="project-header-info">
-                <h1><span class="emoji">💖</span> SoulBond</h1>
-                <p class="section-subtitle">An empathetic AI-driven companion for personal well-being and connection</p>
+                <h1><span class="emoji">📈</span> ChartMaster</h1>
+                <p class="section-subtitle">AI-Powered Technical Analysis for Smarter Trading</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
                         <h4>Platform</h4>
@@ -27,15 +27,15 @@
                     </div>
                     <div class="meta-item">
                         <h4>Category</h4>
-                        <p>AI / Mental Wellness</p>
+                        <p>Fintech / AI</p>
                     </div>
                     <div class="meta-item">
                         <h4>Tech Stack</h4>
-                        <p>TypeScript, Gemini API, Node.js</p>
+                        <p>TypeScript, Node.js, Gemini API</p>
                     </div>
                     <div class="meta-item">
-                        <h4>Status</h4>
-                        <p>MVP / Experimental</p>
+                        <h4>Target</h4>
+                        <p>Traders & Analysts</p>
                     </div>
                 </div>
             </div>
@@ -44,48 +44,50 @@
         <main class="detail-content">
             <div class="main-content">
                 <section class="content-section">
-                    <h2><i class="fas fa-heart"></i> Overview</h2>
-                    <p>SoulBond is a sophisticated AI companion application designed to provide users with an
-                        interactive, emotionally intelligent digital presence. Integrated with Google’s Gemini API, the
-                        platform facilitates meaningful, context-aware conversations that adapt to the user's emotional
-                        state.</p>
+                    <h2><i class="fas fa-eye"></i> Overview</h2>
+                    <p>ChartMaster is a robust financial analysis tool designed to interpret complex trading charts
+                        using the power of multimodal Artificial Intelligence. By integrating the Google Gemini API, the
+                        platform analyzes visual data from market charts to provide users with comprehensive insights,
+                        trend evaluations, and technical indicators.</p>
                 </section>
 
                 <section class="content-section">
                     <h2><i class="fas fa-puzzle-piece"></i> Problem & Solution</h2>
-                    <p>Modern digital interactions often lack personal depth, and many individuals struggle to find
-                        accessible, non-judgmental outlets for emotional expression. SoulBond solves this by leveraging
-                        high-performance AI to provide a 24/7 empathetic companion that listens and responds with
-                        nuance, bridging the gap between technical AI capability and human emotional needs.</p>
+                    <p>Traditional chart analysis requires years of experience and is often highly subjective, leading
+                        to inconsistent trading decisions and missed opportunities. ChartMaster addresses this by
+                        utilizing advanced AI to objectively analyze price action and chart patterns, providing instant,
+                        high-level summaries that reduce cognitive load and enhance decision-making speed for traders.
+                    </p>
                 </section>
 
                 <section class="content-section">
                     <h2><i class="fas fa-sparkles"></i> Key Features</h2>
                     <div class="feature-grid">
                         <div class="feature-item">
-                            <h3>Gemini AI Integration</h3>
-                            <p>Utilizes Google's advanced language models for natural, human-like dialogue.</p>
+                            <h3>Multimodal AI</h3>
+                            <p>Interprets visual chart data directly using Google Gemini's vision capabilities.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Sentiment-Aware Responses</h3>
-                            <p>Immediate, real-time emotional support that adapts to the user's input tone.</p>
+                            <h3>Automated Patterns</h3>
+                            <p>Instantly recognizes complex chart patterns and technical trends.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Type-Safe Architecture</h3>
-                            <p>Built with TypeScript to ensure code reliability and scalable development.</p>
+                            <h3>Real-time Insights</h3>
+                            <p>Generates actionable trading intelligence with high-speed automated processing.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Responsive Web UI</h3>
-                            <p>A clean, minimalist interface optimized for both desktop and mobile interaction.</p>
+                            <h3>Responsive Dashboard</h3>
+                            <p>Seamlessly access analysis across desktop and mobile devices.</p>
                         </div>
                     </div>
                 </section>
 
                 <section class="content-section">
-                    <h2><i class="fas fa-lock"></i> Privacy & Security</h2>
-                    <p>The project focuses on creating a seamless bridge between advanced large language models and a
-                        user-friendly interface, offering a private and secure environment for individuals to express
-                        thoughts or seek advice through reflective dialogue.</p>
+                    <h2><i class="fas fa-code-branch"></i> Technical Implementation</h2>
+                    <p>Developed with TypeScript for a type-safe and performant experience, the application bridges the
+                        gap between raw visual data and actionable intelligence. It leverages the latest Gemini Pro
+                        models to ensure high-accuracy interpretation of candlesticks, support/resistance levels, and
+                        other technical indicators.</p>
                 </section>
             </div>
 
@@ -95,22 +97,17 @@
                     <div class="tech-list mb-4">
                         <span class="tech-pill">TypeScript</span>
                         <span class="tech-pill">Node.js</span>
-                        <span class="tech-pill">Gemini API</span>
+                        <span class="tech-pill">Gemini Pro API</span>
                         <span class="tech-pill">AI Studio</span>
                         <span class="tech-pill">HTML5</span>
                         <span class="tech-pill">CSS3</span>
-                        <span class="tech-pill">Dotenv</span>
                     </div>
                     <a href="#" class="link-btn secondary"><i class="fas fa-lock"></i> Private Source</a>
 
                     <div class="meta-item mt-4">
-                        <h4>Application Goals</h4>
-                        <ul class="project-features-list">
-                            <li>Mental Wellness Support</li>
-                            <li>Emotional Journaling</li>
-                            <li>Interactive Companionship</li>
-                            <li>Context-Aware Advice</li>
-                        </ul>
+                        <h4>Use Case</h4>
+                        <p>Retail traders and financial analysts seeking automated, AI-driven confirmation for their
+                            technical analysis and market predictions.</p>
                     </div>
                 </div>
             </aside>
