feat: Implement light and dark mode theme toggling, refresh the color palette, and add updated resume and review files.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		posthog.init('phc_xjR9rbGz3zqJROGBfB0HWPrWWhuihEEY32Ku23PGAJa', { api_host: 'https://us.i.posthog.com', person_profiles: 'identified_only' })
 	</script>
 
-	<title>Gautham Mahadevan - Data Analyst & Product Builder</title>
+	<title>Gautham Mahadevan - Data Analyst & Analytics Professional</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
-		content="Gautham Mahadevan - Data Analyst & Product Builder with 5+ years transforming chaos into clarity across Banking, SaaS, and Quick Commerce. Based in Chennai, India.">
+		content="Gautham Mahadevan - Data Analyst with 5+ years driving business decisions across Banking, SaaS, and Quick Commerce. Expert in SQL, Python, Tableau, BigQuery. Based in Chennai, India.">
 	<meta name="keywords"
 		content="Data Analyst, Product Analyst, Product Manager, SQL, Python, Tableau, BigQuery, Chennai, India">
 	<link rel="stylesheet" href="assets/css/modern.css" />
@@ -37,12 +37,15 @@
 			<ul class="nav-menu">
 				<li><a href="#intro" class="nav-link">Home</a></li>
 				<li><a href="#why-me" class="nav-link">Why Me</a></li>
-				<li><a href="#fun-facts" class="nav-link">Stats</a></li>
 				<li><a href="#projects" class="nav-link">Projects</a></li>
 				<li><a href="#skills" class="nav-link">Skills</a></li>
 				<li><a href="#experience" class="nav-link">Experience</a></li>
-				<li><a href="#contact" class="nav-link">Contact</a></li>
+				<li><a href="#contact" class="nav-link nav-cta">Contact Me</a></li>
 			</ul>
+			<button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+				<i class="fas fa-moon"></i>
+				<i class="fas fa-sun"></i>
+			</button>
 			<div class="hamburger">
 				<span></span>
 				<span></span>
@@ -62,25 +65,26 @@
 			<div class="hero-text">
 				<div class="hero-tagline">
 					<span class="tagline-icon">📊</span>
-					<span class="tagline-text">Turning Chaos into Clarity, One Query at a Time</span>
+					<span class="tagline-text">Transforming Data into Strategic Business Decisions</span>
 				</div>
 				<h1 class="hero-title">
 					<span class="gradient-text">Gautham Mahadevan</span>
 				</h1>
 				<p class="hero-subtitle">
-					<i class="fas fa-chart-line"></i> Data Analyst • Product Builder • Automation Enthusiast
+					<i class="fas fa-chart-line"></i> Data Analyst • Product Analytics • Business Intelligence
 				</p>
 				<div class="hero-quote">
 					<i class="fas fa-quote-left quote-icon"></i>
-					<p class="quote-text">"Torture the data, and it will confess to anything." — Ronald Coase</p>
+					<p class="quote-text">5+ years delivering data-driven insights across Banking, SaaS, and Quick
+						Commerce</p>
 					<i class="fas fa-quote-right quote-icon"></i>
 				</div>
 				<p class="hero-description">
-					I'm a <strong>data detective</strong> 🕵️‍♂️ who transforms messy datasets into
-					actionable insights and builds <strong>full-stack products</strong> that solve real problems.
-					With 5+ years across Banking, SaaS, Digital Marketing, and Quick Commerce,
-					I bridge the gap between raw data and strategic decisions.
-					<span class="fun-text">I speak fluent SQL, dream in Python, and visualize in Tableau!</span>
+					I transform complex datasets into <strong>actionable business insights</strong> that drive strategic
+					decisions.
+					With expertise in <strong>SQL optimization, dashboard development, and product analytics</strong>,
+					I help organizations understand their data, optimize processes, and achieve measurable results.
+					<span class="fun-text">Specialized in BigQuery, Tableau, Python, and CleverTap analytics.</span>
 				</p>
 				<div class="hero-links">
 					<a href="https://www.linkedin.com/in/gautham-mahadevan/" target="_blank" class="btn btn-primary">
@@ -89,15 +93,15 @@
 					<a href="https://github.com/gauthamgtg" target="_blank" class="btn btn-secondary">
 						<i class="fab fa-github"></i> GitHub
 					</a>
-					<a href="https://flowcv.com/resume/vl6k2hbbfp" target="_blank" class="btn btn-outline">
-						<i class="fas fa-file-pdf"></i> Resume
+					<a href="assets/resume/Gautham_Mahadevan_Resume.pdf" download class="btn btn-outline">
+						<i class="fas fa-file-pdf"></i> Download Resume
 					</a>
 				</div>
 			</div>
 			<div class="hero-stats">
 				<div class="stat-card">
 					<div class="stat-icon"><i class="fas fa-database"></i></div>
-					<div class="stat-number">10<sup>9</sup><span class="plus-sign">+</span></div>
+					<div class="stat-number">100<span class="plus-sign">+</span></div>
 					<div class="stat-label">Data Points Processed</div>
 				</div>
 				<div class="stat-card">
@@ -126,23 +130,24 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">Why Work With Me? <span class="emoji">💡</span></h2>
-				<p class="section-subtitle">What I bring to the table (besides coffee enthusiasm)</p>
+				<p class="section-subtitle">Core competencies that drive results</p>
 			</div>
 			<div class="why-me-grid">
 				<div class="why-me-card">
 					<div class="why-me-icon"><i class="fas fa-route"></i></div>
-					<h4>Data-to-Decision Pipeline</h4>
-					<p>I don't just crunch numbers—I turn raw data into strategic decisions that move the needle.</p>
+					<h4>Business Impact Through Data</h4>
+					<p>I turn raw data into strategic decisions that drive revenue growth and operational efficiency.
+					</p>
 				</div>
 				<div class="why-me-card">
 					<div class="why-me-icon"><i class="fas fa-users"></i></div>
 					<h4>Cross-Functional Collaborator</h4>
-					<p>I speak fluent Engineer, Designer, and Executive. Bridging gaps is my specialty.</p>
+					<p>Effective communication across Engineering, Product, and Executive teams to drive alignment.</p>
 				</div>
 				<div class="why-me-card">
-					<div class="why-me-icon"><i class="fas fa-rocket"></i></div>
-					<h4>Zero to Product Builder</h4>
-					<p>10+ full-stack products built from scratch. I ship code, not just slide decks.</p>
+					<div class="why-me-icon"><i class="fas fa-tachometer-alt"></i></div>
+					<h4>Analytics Velocity</h4>
+					<p>Fast turnaround on complex analysis requests with accurate, actionable insights.</p>
 				</div>
 				<div class="why-me-card">
 					<div class="why-me-icon"><i class="fas fa-piggy-bank"></i></div>
@@ -156,8 +161,8 @@
 				</div>
 				<div class="why-me-card">
 					<div class="why-me-icon"><i class="fas fa-lightbulb"></i></div>
-					<h4>Insight Storyteller</h4>
-					<p>Beautiful dashboards that tell the story. Data is poetry when visualized right.</p>
+					<h4>Data Quality Champion</h4>
+					<p>Schema redesign expertise ensuring clean, reliable data for meaningful analysis.</p>
 				</div>
 			</div>
 
@@ -207,64 +212,64 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">By The Numbers <span class="emoji">📈</span></h2>
-				<p class="section-subtitle">Some fun stats about my data journey</p>
+				<p class="section-subtitle">Key metrics from my data journey</p>
 			</div>
 			<div class="facts-grid">
 				<div class="fact-card stat-blue">
 					<div class="fact-icon"><i class="fas fa-chart-bar"></i></div>
 					<div class="fact-number" data-target="20">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
+						<span class="number-val">20</span><span class="plus-sign">+</span>
 					</div>
 					<div class="fact-label">Dashboards Created</div>
 				</div>
 				<div class="fact-card stat-purple">
 					<div class="fact-icon"><i class="fas fa-database"></i></div>
 					<div class="fact-number" data-target="500">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
+						<span class="number-val">500</span><span class="plus-sign">+</span>
 					</div>
 					<div class="fact-label">SQL Queries Written</div>
 				</div>
 				<div class="fact-card stat-pink">
 					<div class="fact-icon"><i class="fas fa-bolt"></i></div>
 					<div class="fact-number" data-target="30">
-						<span class="number-val">0</span><span class="plus-sign">%+</span>
+						<span class="number-val">30</span><span class="plus-sign">%+</span>
 					</div>
 					<div class="fact-label">Performance Boost</div>
 				</div>
 				<div class="fact-card stat-cyan">
 					<div class="fact-icon"><i class="fas fa-code"></i></div>
 					<div class="fact-number" data-target="100000">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
+						<span class="number-val">100,000</span><span class="plus-sign">+</span>
 					</div>
 					<div class="fact-label">Lines of Code</div>
 				</div>
 				<div class="fact-card stat-orange">
 					<div class="fact-icon"><i class="fas fa-brain"></i></div>
 					<div class="fact-number" data-target="10">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
+						<span class="number-val">10</span><span class="plus-sign">+</span>
 					</div>
 					<div class="fact-label">Full Stack Projects</div>
 				</div>
 				<div class="fact-card stat-green">
 					<div class="fact-icon"><i class="fas fa-cogs"></i></div>
 					<div class="fact-number" data-target="100">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
+						<span class="number-val">100</span><span class="plus-sign">+</span>
 					</div>
-					<div class="fact-label">Hours saved via Automations</div>
-				</div>
-				<div class="fact-card stat-red">
-					<div class="fact-icon"><i class="fas fa-coffee"></i></div>
-					<div class="fact-number" data-target="1250">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
-					</div>
-					<div class="fact-label">Coffees Consumed</div>
+					<div class="fact-label">Hours Saved via Automation</div>
 				</div>
 				<div class="fact-card stat-indigo">
 					<div class="fact-icon"><i class="fas fa-medal"></i></div>
 					<div class="fact-number" data-target="50">
-						<span class="number-val">0</span><span class="plus-sign">+</span>
+						<span class="number-val">50</span><span class="plus-sign">+</span>
 					</div>
 					<div class="fact-label">Mini Projects</div>
+				</div>
+				<div class="fact-card stat-red">
+					<div class="fact-icon"><i class="fas fa-users-cog"></i></div>
+					<div class="fact-number" data-target="5">
+						<span class="number-val">5</span><span class="plus-sign">+</span>
+					</div>
+					<div class="fact-label">Cross-Functional Teams Supported</div>
 				</div>
 			</div>
 		</div>
@@ -376,7 +381,7 @@
 					<!-- XXXXX (WowWrite) -->
 					<div class="project-card featured">
 						<div class="project-card-header">
-							<h4>🚀 XXXXX</h4>
+							<h4>🚀 Stealth Product</h4>
 							<span class="project-badge">Next.js • AI • SaaS</span>
 						</div>
 						<p class="project-description">A comprehensive platform combining AI content detection and 50+
@@ -1135,11 +1140,7 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">My Toolbox <span class="emoji">🛠️</span></h2>
-				<p class="section-subtitle">Technologies and tools I work with (and love!)</p>
-				<div class="section-catchphrase">
-					<span class="catchphrase-text">"Give a data analyst the right tools, and they'll move mountains...
-						of data!"</span>
-				</div>
+				<p class="section-subtitle">Technical Expertise & Tools</p>
 			</div>
 			<div class="skills-grid">
 				<div class="skill-card skill-blue">
@@ -1191,7 +1192,7 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">Key Achievements <span class="emoji">🏆</span></h2>
-				<p class="section-subtitle">Numbers don't lie - here's proof!</p>
+				<p class="section-subtitle">Quantified Impact</p>
 			</div>
 			<div class="achievements-grid">
 				<div class="achievement-card highlight">
@@ -1221,8 +1222,8 @@
 				<div class="achievement-card highlight">
 					<div class="achievement-icon">💰</div>
 					<div class="achievement-number">$20,000+</div>
-					<div class="achievement-label">Cloud Costs Saved</div>
-					<div class="achievement-desc">Resource optimization & efficiency</div>
+					<div class="achievement-label">Revenue Saved</div>
+					<div class="achievement-desc">Prompt Analysis and Action</div>
 				</div>
 			</div>
 		</div>
@@ -1233,10 +1234,7 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">Work Experience <span class="emoji">💼</span></h2>
-				<p class="section-subtitle">My professional journey - where data meets business</p>
-				<div class="section-catchphrase">
-					<span class="catchphrase-text">"From spreadsheets to success stories"</span>
-				</div>
+				<p class="section-subtitle">Professional Experience</p>
 			</div>
 			<div class="timeline">
 				<div class="timeline-item">
@@ -1370,7 +1368,7 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">Education <span class="emoji">🎓</span></h2>
-				<p class="section-subtitle">Where I learned to love data (and coffee)</p>
+				<p class="section-subtitle">Academic Background</p>
 			</div>
 			<div class="education-grid">
 				<div class="education-card">
@@ -1410,10 +1408,7 @@
 		<div class="container">
 			<div class="section-header">
 				<h2 class="section-title">Let's Connect! <span class="emoji">🤝</span></h2>
-				<p class="section-subtitle">Have a data problem? Let's solve it together!</p>
-				<div class="section-catchphrase">
-					<span class="catchphrase-text">"The best insights come from collaboration"</span>
-				</div>
+				<p class="section-subtitle">Get in Touch</p>
 			</div>
 			<div class="contact-grid">
 				<div class="contact-card">
@@ -1444,7 +1439,7 @@
 				<div class="contact-card">
 					<div class="contact-icon"><i class="fas fa-file-pdf"></i></div>
 					<h3>Resume</h3>
-					<a href="https://flowcv.com/resume/vl6k2hbbfp" target="_blank">Download Resume</a>
+					<a href="assets/resume/Gautham_Mahadevan_Resume.pdf" download>Download Resume</a>
 				</div>
 			</div>
 		</div>
@@ -1454,16 +1449,10 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-content">
-				<div class="footer-quote">
-					<p>"Data is the new oil, and I'm the refinery!" 🛢️</p>
-				</div>
 				<p>&copy; 2025 Gautham Mahadevan. All rights reserved.</p>
 				<p class="footer-note">Designed with <span class="heart">❤️</span>, data insights, and way too much
 					coffee ☕</p>
-				<div class="footer-fun">
-					<p class="footer-stats">Fun fact: This page was built with <span id="lines-of-code">0</span> lines
-						of code (and counting!)</p>
-				</div>
+				<p class="footer-stats">Fun fact: This page was built with 5,042 lines of code (and counting!)</p>
 			</div>
 		</div>
 	</footer>
@@ -1512,6 +1501,21 @@
 			} else {
 				navbar.classList.remove('scrolled');
 			}
+		});
+
+		// Theme Toggle
+		const themeToggle = document.getElementById('themeToggle');
+		const html = document.documentElement;
+
+		// Check for saved theme preference or default to dark
+		const savedTheme = localStorage.getItem('theme') || 'dark';
+		html.setAttribute('data-theme', savedTheme);
+
+		themeToggle.addEventListener('click', () => {
+			const currentTheme = html.getAttribute('data-theme');
+			const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+			html.setAttribute('data-theme', newTheme);
+			localStorage.setItem('theme', newTheme);
 		});
 
 		// Remove preload class after page loads
