feat: Update CineSage project details, shorten portfolio review, and add latest resume.

--- a/projects/cinesage.html
+++ b/projects/cinesage.html
@@ -19,7 +19,8 @@
         <header class="project-hero">
             <div class="project-header-info">
                 <h1><span class="emoji">🎬</span> CineSage</h1>
-                <p class="section-subtitle">Discover your next favorite film with AI-driven cinematic intelligence</p>
+                <p class="section-subtitle">Personifying cinema discovery with natural language search, mood-based
+                    filtering, and Arcade challenges.</p>
                 <div class="project-meta-grid">
                     <div class="meta-item">
                         <h4>Platform</h4>
@@ -31,11 +32,11 @@
                     </div>
                     <div class="meta-item">
                         <h4>Tech Stack</h4>
-                        <p>TypeScript, Gemini AI, Node.js</p>
+                        <p>Next.js, Tailwind CSS, Gemini AI</p>
                     </div>
                     <div class="meta-item">
                         <h4>Deployment</h4>
-                        <p>Environment-Driven API Scaling</p>
+                        <p>Vercel Edge Network</p>
                     </div>
                 </div>
             </div>
@@ -45,9 +46,10 @@
             <div class="main-content">
                 <section class="content-section">
                     <h2><i class="fas fa-video"></i> Overview</h2>
-                    <p>CineSage is a streamlined movie recommendation platform that leverages the power of generative AI
-                        to transform how users discover content. Built using TypeScript and integrated with the Google
-                        Gemini API, the application provides a conversational interface for cinematic exploration.</p>
+                    <p>CineSage is a comprehensive movie recommendation platform that goes beyond simple filtering.
+                        Built with <strong>Next.js</strong> and <strong>Gemini AI</strong>, it offers a conversational
+                        interface for cinematic exploration, a gamified "Arcade" for movie buffs, and personalized
+                        watchlists.</p>
                 </section>
 
                 <section class="content-section">
@@ -62,31 +64,33 @@
                     <h2><i class="fas fa-magic"></i> Core Capabilities</h2>
                     <div class="feature-grid">
                         <div class="feature-item">
-                            <h3>Generative AI Recommendations</h3>
-                            <p>Context-aware suggestions powered by Large Language Models for deep content
-                                understanding.</p>
+                            <h3>🤖 AI-Driven Recommendations</h3>
+                            <p>Natural language search that understands "80s sci-fi with a hopeful vibe" or "movies like
+                                Inception but funnier".</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Natural Language Processing</h3>
-                            <p>Ability to interpret complex prompts like "movies with a melancholic but hopeful
-                                late-night vibe."</p>
+                            <h3>🎮 CineSage Arcade</h3>
+                            <p>Test your film knowledge with Emoji Quizzes, Hangman, and trivia challenges. Compete on
+                                the global leaderboard.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Personalized Discovery</h3>
-                            <p>Moves beyond static filters to understand subjective preferences and atmospheres.</p>
+                            <h3>📅 Curate Calendar & Lists</h3>
+                            <p>Build your watchlist and plan your movie nights with an integrated calendar system.</p>
                         </div>
                         <div class="feature-item">
-                            <h3>Rapid Deployment</h3>
-                            <p>Optimized for quick local setup and environment-driven configuration.</p>
+                            <h3>⚡ High-Performance UX</h3>
+                            <p>Built with Next.js and Tailwind for a lightning-fast, responsive experience on any
+                                device.</p>
                         </div>
                     </div>
                 </section>
 
                 <section class="content-section">
                     <h2><i class="fas fa-microchip"></i> Technical Architecture</h2>
-                    <p>Built with a focus on **Type-safety** using **TypeScript**, CineSage ensures a robust experience.
-                        The core intelligence is served via the **Google Gemini API**, integrated through **Google AI
-                        Studio** for reliable, cloud-based performance.</p>
+                    <p>CineSage leverages the **Next.js 14** app router for optimal performance and SEO. The UI is
+                        crafted with **Tailwind CSS** for a modern, responsive feel. At its core, **Google Gemini AI**
+                        powers the recommendation engine and trivia generation, ensuring dynamic and context-aware
+                        interactions.</p>
                 </section>
             </div>
 
@@ -94,22 +98,23 @@
                 <div class="sidebar-box">
                     <h3>Project Details</h3>
                     <div class="tech-list mb-4">
+                        <span class="tech-pill">Next.js</span>
+                        <span class="tech-pill">Tailwind CSS</span>
                         <span class="tech-pill">TypeScript</span>
-                        <span class="tech-pill">Gemini API</span>
-                        <span class="tech-pill">Node.js</span>
-                        <span class="tech-pill">AI Studio</span>
-                        <span class="tech-pill">HTML5</span>
-                        <span class="tech-pill">CSS3</span>
+                        <span class="tech-pill">Gemini AI</span>
+                        <span class="tech-pill">Vercel</span>
                     </div>
+                    <a href="https://cine-sage-eight.vercel.app/" target="_blank" class="link-btn primary mb-2"><i
+                            class="fas fa-external-link-alt"></i> Live Demo</a>
                     <a href="#" class="link-btn secondary"><i class="fas fa-lock"></i> Private Source</a>
 
                     <div class="meta-item mt-4">
                         <h4>Discovery Vectors</h4>
                         <ul class="project-features-list">
-                            <li>Atmospheric Matching</li>
-                            <li>Thematic Sentiment Analysis</li>
-                            <li>Context-Aware Mood Matching</li>
-                            <li>Niche Genre Exploration</li>
+                            <li>Mood-based Filtering</li>
+                            <li>Arcade Gamification</li>
+                            <li>Natural Language Search</li>
+                            <li>User Taste Profiling</li>
                         </ul>
                     </div>
                 </div>
