feat: Add new achievements for user behavior analysis, fraud investigation, and risk operations, and refine descriptions for sales performance and KPI monitoring.

--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,9 @@
 							<li>Built a comprehensive <strong>PostHog analytics dashboard</strong> for Bacon product
 								that integrated PostHog event data, database metrics, and Meta campaign data to track
 								DAU/MAU, ROAS, cohorts, and credit consumption.</li>
+							<li>Devised CleverTap funnel dashboards to analyze user behaviour, understand customer pain
+								points and optimize the customer journey, resulting in a <strong>20% improvement in user
+									acquisition and a 4% increase in conversion rate</strong>.</li>
 							<li>Designed and implemented automated data pipelines using <strong>Airflow</strong> for
 								Facebook and Snapchat ad spend ingestion, eliminated manual data collection efforts, and
 								ensured real-time marketing data availability.</li>
@@ -1144,13 +1147,17 @@
 						<ul class="timeline-details">
 							<li>Designed and executed <strong>A/B testing framework</strong> for promotional campaigns
 								(coupons, banners), measured campaign effectiveness, and improved merchant retention by
-								<strong>15%</strong> and order volume by <strong>10%</strong>.</li>
+								<strong>15%</strong> and order volume by <strong>10%</strong>.
+							</li>
 							<li>Developed attribution model for B2B operations that calculated session losses due to
 								weather and curfew constraints, optimized surge pricing which increased <strong>gross
 									margin by 5%</strong>.</li>
-							<li>Built automated performance tracking dashboard for 30+ sales officers and tele-calling
-								teams, delivered <strong>20% productivity boost</strong>, and reduced manual reporting
-								time by <strong>12 hours/week</strong> through KPI monitoring dashboards.</li>
+							<li>Designed a data model to daily track and enhance the performance of a Tele-calling team
+								and over 30 sales officers, leading to a <strong>20% boost in productivity</strong>.
+							</li>
+							<li>Established dashboards and reports for monitoring KPIs (including CR%, SO%, CPT, AOV,
+								GM, EPH), resulting in a reduction of <strong>12 hours/week</strong> spent in manual
+								reporting.</li>
 							<li>Optimized Tableau dashboard queries in GCP and achieved <strong>80% reduction in slot
 									time</strong>. Implemented dynamic pricing model, coupons and banners based on
 								customer usage which increased order volume by <strong>10%</strong>.</li>
@@ -1188,6 +1195,10 @@
 								daily transactions, achieved <strong>95% accuracy</strong> in suspicious activity
 								detection with sub-2-minute response time, and prevented <strong>Rs. 1.2+ Crore</strong>
 								in potential losses.</li>
+							<li>Investigated daily card, NetBanking, and UPI fraud cases by piecing together IP
+								locations, device fingerprints, SMS OTP logs, and merchant transaction trails—solved
+								<strong>100% of assigned cases within TAT</strong>.
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -1211,6 +1222,8 @@
 						<ul class="timeline-details">
 							<li>Managed risk assessment for <strong>10+ banking products</strong> (Personal Loans, Auto
 								Loans, Credit Cards) with ticket sizes up to Rs. 50 lakhs.</li>
+							<li>Perform audit and seeding operations on vendors and internal stakeholders, Risk
+								sampling/investigation of credit cards/merchant acquiring applications.</li>
 							<li>Created data presentations and reports tracking portfolio quality metrics, early
 								mortality rates, and collection trends to inform risk mitigation strategies.</li>
 						</ul>
