style: Improve mobile responsiveness for navigation, hero stats, and project details, adjust SQL terminal quote styling, and fix an unclosed div in index.html.

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 							and much more</strong>. Mastering the art of AI-assisted development.</p>
 				</div>
 			</div>
+		</div>
 	</section>
 
 	<!-- Domain Expertise Section -->
